new design added and HTML markup changed

--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ekaterina's Portfolio</title>
-  <link href="style.css" rel="styleseet">
+  <title>Екатерина Терешко</title>
+  <link href="style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mada&display=swap" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
 </head>
 <body>
-  <h1>Hello!</h1>
+  <div id="particles-js"></div>
+
+  <div class="header">
+    <h1>Hello, I'm Ekaterina!<br>I'm a frontend developer</h1>
+    <img class="main_img" src="Girl.svg" width="600px">
+  </div>
+
+  <div class="projects_wrapper">
+    <div class="project_item"></div>
+    <div class="project_item"></div>
+    <div class="project_item"></div>
+    <div class="project_item"></div>
+    <div class="project_item"></div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
+featured_projects section
