--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mada&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
-  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <link rel=“icon” href=”favicon.ico” type=“image/x-icon”>
+  <link rel=“shortcut icon” href=“favicon.ico” type=“image/x-icon”>
 </head>
 <body>
   <div id="particles-js"></div>
