--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Екатерина Терешко</title>
+  <title>Ekaterina Tereshko</title>
   <link href="style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mada&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mada&family=Shantell+Sans:wght@300;400&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
   <link rel=“icon” href=”favicon.ico” type=“image/x-icon”>
   <link rel=“shortcut icon” href=“favicon.ico” type=“image/x-icon”>
@@ -16,16 +16,142 @@
   <div id="particles-js"></div>
 
   <div class="header">
-    <h1>Hello, I'm Ekaterina!<br>I'm a frontend developer</h1>
-    <img class="main_img" src="Girl.svg" width="600px">
+    <div id="language_btn">RU</div>
+    <nav>
+      <a href="#about" class="stretch">About me</a>
+      <a href="#skills" class="stretch">Skills & Tools</a>
+      <a href="#projects" class="stretch">Projects</a>
+      <a href="#contacts" class="stretch">Contact me</a>
+    </nav>
   </div>
 
-  <div class="projects_wrapper">
-    <div class="project_item"></div>
-    <div class="project_item"></div>
-    <div class="project_item"></div>
-    <div class="project_item"></div>
-    <div class="project_item"></div>
+  <div class="main_section" id="about">
+    <div class="background_rectangle"></div>
+    <img id="main_img" src="./assets/Girl_red.svg" width="600px">
+    <div class="main_text_container">
+      <h1>Hello, I'm Ekaterina!<br>I'm a frontend developer</h1>
+      <div class="main_text">
+        <p>
+          I'm passionate about creating valuable digital products which can educate, inform or entertain and make a difference in people's everyday lives. I enjoy both sides of the creating process - writing clean code and caring about design details and positive user experience.
+        </p>
+        <a id="link_contacts" href="#contacts">Get in touch</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="skills_section" id="skills">
+    <h2>Skills & Tools</h2>
+    <div class="tool_wrapper">
+    <div class="tool_container">
+      <img src="./assets/icons/html5.svg" width="60px">
+      <p class="tool_container_text">HTML5</p>
+    </div>
+    <div class="tool_container">
+      <img src="./assets/icons/css3.svg" width="60px">
+      <p class="tool_container_text">CSS3</p>
+    </div>
+    <div class="tool_container">
+      <img src="./assets/icons/js.svg" width="60px">
+      <p class="tool_container_text">JavaScript</p>
+    </div>
+    <div class="tool_container">
+      <img src="./assets/icons/react.svg" width="60px">
+      <p class="tool_container_text">React</p>
+    </div>
+    <div class="tool_container">
+      <img src="./assets/icons/es6.svg" width="60px">
+      <p class="tool_container_text">ES6</p>
+    </div>
+    <div class="tool_container">
+      <img src="./assets/icons/git.svg" width="60px">
+      <p class="tool_container_text">Git</p>
+    </div>
+    <div class="tool_container">
+      <img src="./assets/icons/github.svg" width="60px">
+      <p class="tool_container_text">GitHub</p>
+    </div>
+    <div class="tool_container">
+      <img src="./assets/icons/responsive.svg" width="60px">
+      <p class="tool_container_text">Responsive <br>websites</p>
+    </div>
+    <div class="tool_container">
+      <img src="./assets/icons/adobe.svg" width="60px">
+      <p class="tool_container_text">Adobe tools</p>
+    </div>
+    <div class="tool_container">
+      <img src="./assets/icons/figma.svg" width="40px">
+      <p class="tool_container_text">Figma</p>
+    </div>
+    </div>
+    </div>
+
+  <div class="projects_section" id="projects">
+    <h2>Projects</h2>
+    <div class="projects_wrapper">
+      <div class="project_container" id="game_with_computer">
+        <div class="background_rectangle_project"></div>
+        <img class="project_mockup" src="./assets/app_mockups/mockup_game_with_computer.jpg">
+        <div class="project_container_text">
+          <h2 class="project_text_name">Game with computer</h2>
+          <p class="project_text_description">JavaScript-based game for entertaining or learning. Uses Math.random() method and functions to set a random number within a certain range of numbers that the user needs to guess. Provides two options: numbers from 1 to 20 or from 1 to 100.</p>
+          <div class="links">
+            <div class="github_btn"><a href="https://github.com/Katereshko/game-with-computer">Check on GitHub</a></div>
+            <div class="netlify_btn"><a href="https://game-with-computer-1-100.netlify.app/">Check on Netlify</a></div>
+            <img class="netlify_arrow" src="./assets/arrow.svg">
+          </div>
+        </div>
+      </div>
+      <div class="project_container" id="game_with_computer">
+        <div class="background_rectangle_project"></div>
+        <img class="project_mockup" src="./assets/app_mockups/mockup_weather_app.jpg">
+        <div class="project_container_text">
+          <h2 class="project_text_name">Weather App</h2>
+          <p class="project_text_description">JavaScript-based app that shows weather conditions in the user's city (or any other one).</p>
+          <p class="project_text_description">Tools used:</p>
+          <ul>
+          <li class="project_text_description">API servers provided by the websites https://abstractapi.com (for IP) and https://api.openweathermap.org (for weather data);</li>
+          <li class="project_text_description">The fetch() method which requests data from a server of the website that provides weather data. This method requires a parameter, the URL to request, and returns a promise.</li>
+          </ul>
+          <div class="links">
+            <div class="github_btn"><a href="https://github.com/Katereshko/my-weather-app">Check on GitHub</a></div>
+            <div class="netlify_btn"><a href="https://my-weather-app-104.netlify.app/">Check on Netlify</a></div>
+            <img class="netlify_arrow" src="./assets/arrow.svg">
+          </div>
+        </div>
+      </div>
+      <div class="project_container" id="Eggs Timer">
+        <div class="background_rectangle_project"></div>
+        <img class="project_mockup" src="./assets/app_mockups/mockup_eggs_timer.jpg">
+        <div class="project_container_text">
+          <h2 class="project_text_name">Eggs Timer</h2>
+          <p class="project_text_description">JavaScript-based timer that sets a time countdown picked by user, shows the time remained and also illustrates the process with a progress bar and plays a sound when the countdown is over.</p>
+          <div class="links">
+            <div class="github_btn"><a href="https://github.com/Katereshko/my-eggs-timer">Check on GitHub</a></div>
+            <div class="netlify_btn"><a href="https://my-eggs-timer.netlify.app/">Check on Netlify</a></div>
+            <img class="netlify_arrow" src="./assets/arrow.svg">
+          </div>
+        </div>
+      </div>
+      <div class="project_container" id="To Do List">
+        <div class="background_rectangle_project"></div>
+        <img class="project_mockup" src="./assets/app_mockups/mockup_to_do_list.jpg">
+        <div class="project_container_text">
+          <h2 class="project_text_name">To Do List</h2>
+          <p class="project_text_description">A simple Todo App built using React.</p>
+          <p class="project_text_description">Created using class components in order to receive a clearer understanding of class components before turning to the in-depth study of functional components.</p>
+          <div class="links">
+            <div class="github_btn"><a href="https://github.com/Katereshko/my-react-to-do-list">Check on GitHub</a></div>
+            <div class="netlify_btn"><a href="https://katereshko-react-to-do-list.netlify.app/">Check on Netlify</a></div>
+            <img class="netlify_arrow" src="./assets/arrow.svg">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="contacts_wrapper" id="contacts">
+    <p>my contacts here</p>
+    <p>and maybe a form</p>
   </div>
 
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
