a draft of a russian version main page added

--- a/main_rus.html
+++ b/main_rus.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ekaterina Tereshko: frontend developer</title>
+  <title>Екатерина Терешко: фронтенд-разработчик</title>
   <link href="style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,12 +16,12 @@
   <div id="particles-js"></div>
 
   <header>
-    <div id="language_btn"><a href="main_rus.html">RU</a></div>
+    <div id="language_btn"><a href="index.html">EN</a></div>
     <nav>
-      <a href="#about" class="stretch">About me</a>
-      <a href="#skills" class="stretch">Skills & Tools</a>
-      <a href="#projects" class="stretch">Projects</a>
-      <a href="#contacts" class="stretch">Contact me</a>
+      <a href="#about" class="stretch">Обо мне</a>
+      <a href="#skills" class="stretch">Технологии</a>
+      <a href="#projects" class="stretch">Проекты</a>
+      <a href="#contacts" class="stretch">Контакты</a>
     </nav>
   </header>
 
@@ -29,18 +29,18 @@
     <div class="background_rectangle"></div>
     <img id="main_img" src="./assets/Girl_red.svg" width="600px">
     <div class="main_text_container">
-      <h1>Hello, I'm Ekaterina!<br>I'm a frontend developer</h1>
+      <h1>Я Екатерина,<br>фронтенд-разработчик</h1>
       <div class="main_text">
         <p>
-          I'm passionate about creating valuable digital products which can educate, inform or entertain and make a difference in people's everyday lives. I enjoy both sides of the creating process - writing clean code and caring about interactive design details and positive user experience. I love using flex and grid, but also enjoy creating PixelPerfect layouts!
+          Я люблю все аспекты фронтенд-разработки: написание чистого кода, работу с логическими задачами, внимание к деталям дизайна и интерактивности, а также заботу о положительном пользовательском опыте. В верстке я обычно использую flex и grid, но я также с удовольствием создаю точную разметку с использованием PixelPerfect. В настоящий момент изучаю React и Node.
         </p>
-        <a id="link_contacts" href="#contacts">Get in touch</a>
+        <a id="link_contacts" href="#contacts">Написать мне</a>
       </div>
     </div>
   </section>
 
   <section class="skills" id="skills">
-    <h2>Skills & Tools</h2>
+    <h2>Технологии</h2>
     <div class="tool_wrapper">
       <div class="tool_container">
         <img src="./assets/icons/html5.svg" width="60px">
@@ -72,11 +72,11 @@
       </div>
       <div class="tool_container">
         <img src="./assets/icons/responsive.svg" width="60px">
-        <p class="tool_container_text">Responsive <br>websites</p>
+        <p class="tool_container_text">Адаптивная <br>верстка</p>
       </div>
       <div class="tool_container">
         <img src="./assets/icons/adobe.svg" width="60px">
-        <p class="tool_container_text">Adobe tools</p>
+        <p class="tool_container_text"> Инструменты <br>Adobe</p>
       </div>
       <div class="tool_container">
         <img src="./assets/icons/figma.svg" width="40px">
@@ -86,13 +86,13 @@
   </section>
 
   <section class="projects" id="projects">
-    <h2>Projects</h2>
+    <h2>Проекты</h2>
     <div class="projects_wrapper">
       <div class="project_container">
         <div class="background_rectangle_project"></div>
         <img class="project_mockup" src="./assets/app_mockups/mockup_pomodoro_timer.jpg">
         <div class="project_container_text">
-          <h3 class="project_text_name">Pomodoro timer</h3>
+          <h3 class="project_text_name">Pomodoro таймер</h3>
           <p class="project_text_description">JavaScript-based timer that will help you to concentrate on your working or studying process. Choose amount of time for work, then for rest and also amount of such rounds. Press "Start" button and use the convenient countdown on your screen. At the end of each round and also when the session is over the app will play appropriate sounds so that you do not miss them.</p>
           <p class="project_text_description">To test the app, select the "test" option in each drop-down list.</p>
           <div class="links">
@@ -106,7 +106,7 @@
         <div class="background_rectangle_project"></div>
         <img class="project_mockup" src="./assets/app_mockups/mockup_know_your_income.jpg">
         <div class="project_container_text">
-          <h3 class="project_text_name">Know Your Income</h3>
+          <h3 class="project_text_name">Калькулятор отпускных выплат</h3>
           <p class="project_text_description">The app will help you to calculate your holiday payments. Fill in your monthly income or calculate the average income right there. Currently available in Russian language and for the Russian holiday payments system only.</p>
           <div class="links">
             <div class="github_btn"><a href="https://github.com/Katereshko/know-your-income">Check on GitHub</a></div>
@@ -119,7 +119,7 @@
         <div class="background_rectangle_project"></div>
         <img class="project_mockup" src="./assets/app_mockups/mockup_weather_app.jpg">
         <div class="project_container_text">
-          <h3 class="project_text_name">Weather App</h3>
+          <h3 class="project_text_name">Прогноз погоды</h3>
           <p class="project_text_description">JavaScript-based app that shows weather conditions in the user's city (or any other one).</p>
           <p class="project_text_description">Tools used:</p>
           <ul>
@@ -137,7 +137,7 @@
         <div class="background_rectangle_project"></div>
         <img class="project_mockup" src="./assets/app_mockups/mockup_game_with_computer.jpg">
         <div class="project_container_text">
-          <h3 class="project_text_name">Game with computer</h3>
+          <h3 class="project_text_name">Игра с компьютером</h3>
           <p class="project_text_description">JavaScript-based game for entertaining or learning. Uses Math.random() method and functions to set a random number within a certain range of numbers that the user needs to guess. Provides two options: numbers from 1 to 20 or from 1 to 100.</p>
           <div class="links">
             <div class="github_btn"><a href="https://github.com/Katereshko/game-with-computer">Check on GitHub</a></div>
@@ -150,7 +150,7 @@
         <div class="background_rectangle_project"></div>
         <img class="project_mockup" src="./assets/app_mockups/mockup_eggs_timer.jpg">
         <div class="project_container_text">
-          <h3 class="project_text_name">Eggs Timer</h3>
+          <h3 class="project_text_name">Таймер для варки яиц</h3>
           <p class="project_text_description">JavaScript-based timer that sets a time countdown picked by user, shows the time remained and also illustrates the process with a progress bar and plays a sound when the countdown is over.</p>
           <div class="links">
             <div class="github_btn"><a href="https://github.com/Katereshko/my-eggs-timer">Check on GitHub</a></div>
@@ -163,7 +163,7 @@
         <div class="background_rectangle_project"></div>
         <img class="project_mockup" src="./assets/app_mockups/mockup_to_do_list.jpg">
         <div class="project_container_text">
-          <h3 class="project_text_name">To Do List</h3>
+          <h3 class="project_text_name">Список дел</h3>
           <p class="project_text_description">A simple todo app built using React.</p>
           <p class="project_text_description">Created using class components in order to receive a clearer understanding of class components before turning to the in-depth study of functional components.</p>
           <div class="links">
@@ -178,23 +178,23 @@
 
   <footer>
     <section class="contacts" id="contacts">
-      <h2>Contact me</h2>
+      <h2>Напишите мне!</h2>
       <div class="contacts_text">
-        <p>Mobile phone number: +7(901)507-48-72</p>
+        <p>Телефон: +7(901)507-48-72</p>
         <p>E-mail: ekaterina.tereshko.me@gmail.com</p>
       </div>
       
       <form class="contacts_form" action="https://formspree.io/f/mgejqgvw" method="POST">
         <input type="hidden" name="_language" value="en"/>
         <label>
-          Your email:
+          Ваш e-mail:
           <input class="input_field" type="email" required name="email">
         </label>
         <label>
-          Your message:
+          Ваше сообщение:
           <textarea class="input_field input_field_text" required name="message"></textarea>
         </label>
-        <button id="btn_submit" type="submit">Send</button>
+        <button id="btn_submit" type="submit">Отправить</button>
       </form>
       <div id="copyright">
         <p>©   2023 Ekaterina Tereshko</p>
